[package]
name = "nom-grapheme-clusters"
version = "0.4.1"
edition = "2021"
description = "Adapter that allows nom to account for unicode grapheme clusters."
license-file = "LICENSE"
repository = "https://github.com/brunoczim/nom-grapheme-clusters/"

[dependencies]
unicode-segmentation = "^1.10"
nom = "^7.1"
